--- a/.github/workflows/workflowFirst.yml
+++ b/.github/workflows/workflowFirst.yml
@@ -2,10 +2,29 @@ name: workflowFirst
 on: push
 jobs: 
   jobs1:
-    name: firstJob
+    name: ubuntu-latest
     runs-on: ubuntu-latest
     steps: 
     - name: step1
-      uses: actions/checkout@v2
-    - name: step2
-      run: env | sort
+      run: date
+  jobs2:
+    name: windows-latest
+    runs-on: windows-latest
+    steps: 
+    - name: step1
+      run: date
+  jobs3:
+    name: macos-latest
+    runs-on: macos-latest
+    steps: 
+    - name: step1
+      run: date
+  jobs4:
+    name: dependencies
+    runs-on: ubuntu-latest
+    needs: [jobs1, jobs2, jobs3]
+    steps: 
+    - name: step1
+      run: date
+    
+
