--- a/.github/workflows/name: workflowCI.yml
+++ b/.github/workflows/name: workflowCI.yml
@@ -1,4 +1,4 @@
-name: workflowList
+name: workflow-quality-check
 on: push
 jobs: 
   qualityCheck:
@@ -11,7 +11,7 @@ jobs:
       uses: actions/setup-node@v2.4.1
     - name: Install Dependencies
       run: yarn install
-    - name: Install Dependencies
+    - name: Code Linting
       run: npm run lint
     
 
