--- a/.github/workflows/name: workflowArtifectCI.yml
+++ b/.github/workflows/name: workflowArtifectCI.yml
@@ -3,7 +3,7 @@ on: push
 jobs: 
   
   qualityCheckAndBuild:
-    name: quality-check
+    name: quality-check-build
     runs-on: ubuntu-latest
     steps: 
     - name: Checkout
@@ -20,22 +20,22 @@ jobs:
       uses: actions/upload-artifact@v2.2.4
       with: 
         name: myApp
-        path: ./out
+        path: ./.next
 
-  downloadAndTestArtifact:
-    name: download-TestApp
-    runs-on: ubuntu-latest
-    needs: [qualityCheckAndBuild]
-    steps: 
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Download a Build Artifact
-      uses: actions/download-artifact@v2.0.10
-      with:
-        name: myApp
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v2.4.1
-    - name: test myApp
-      run : npm run start
+  # downloadAndTestArtifact:
+  #   name: download-TestApp
+  #   runs-on: ubuntu-latest
+  #   needs: [qualityCheckAndBuild]
+  #   steps: 
+  #   - name: Checkout
+  #     uses: actions/checkout@v2
+  #   - name: Download a Build Artifact
+  #     uses: actions/download-artifact@v2.0.10
+  #     with:
+  #       name: myApp
+  #   - name: Setup Node.js environment
+  #     uses: actions/setup-node@v2.4.1
+  #   - name: test myApp
+  #     run : npm run start
         
 
