--- a/.github/workflows/name: workflowArtifectCI.yml
+++ b/.github/workflows/name: workflowArtifectCI.yml
@@ -22,20 +22,20 @@ jobs:
         name: myApp
         path: ./.next
 
-  # downloadAndTestArtifact:
-  #   name: download-TestApp
-  #   runs-on: ubuntu-latest
-  #   needs: [qualityCheckAndBuild]
-  #   steps: 
-  #   - name: Checkout
-  #     uses: actions/checkout@v2
-  #   - name: Download a Build Artifact
-  #     uses: actions/download-artifact@v2.0.10
-  #     with:
-  #       name: myApp
-  #   - name: Setup Node.js environment
-  #     uses: actions/setup-node@v2.4.1
-  #   - name: test myApp
-  #     run : npm run start
+  downloadAndTestArtifact:
+    name: download-TestApp
+    runs-on: ubuntu-latest
+    needs: [qualityCheckAndBuild]
+    steps: 
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v2.0.10
+      with:
+        name: myApp
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v2.4.1
+    - name: test myApp
+      run : npm run start
         
 
