--- a/.github/workflows/name: workflowArtifectCI.yml
+++ b/.github/workflows/name: workflowArtifectCI.yml
@@ -36,6 +36,8 @@ jobs:
     - name: Setup Node.js environment
       uses: actions/setup-node@v2.4.1
     - name: test myApp
-      run : npm run start
+      run : |
+        npm install next
+        npm run start
         
 
