--- a/.github/workflows/name: workflowArtifectCI.yml
+++ b/.github/workflows/name: workflowArtifectCI.yml
@@ -37,7 +37,7 @@ jobs:
       uses: actions/setup-node@v2.4.1
     - name: test myApp
       run : |
-        npm install next
+        npm install next react react-dom
         npm run start
         
 
