workflow added for artifect and next install

--- a/.github/workflows/name: workflowArtifectCI.yml
+++ b/.github/workflows/name: workflowArtifectCI.yml
@@ -35,11 +35,11 @@ jobs:
       uses: actions/download-artifact@v2.0.10
       with:
         name: myAppBuild
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v2.4.1
-    - name: test myApp
-      run : |
-        npm install next react react-dom
-        npm run start
+    # - name: Setup Node.js environment
+    #   uses: actions/setup-node@v2.4.1
+    # - name: test myApp
+    #   run : |
+    #     npm install next react react-dom
+    #     npm run start
         
 
